# smithers

./: .env.example  .gitignore  .gitmodules  .npmignore  .oxlintrc.json  .tuitestignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINAL-STATUS.md  INTEGRATION.md  M1_CLAUDE_EXECUTOR_REVIEW.md  NEXT-STEPS.md  PROMPT.md  PUBLISH_CHECKLIST.md  README.md  RELEASE-CHECKLIST.md  SERIALIZATION.md  SPEC.md  STATUS.md  State.md  TESTING.md  TODO.md  TYPESCRIPT.md  babel.config.json  build.zig  build.zig.zon  bunfig.toml  check-reconciler-api.js  check_smithers_tests.py  check_state_store_errors.py  check_test_imports.py  codebase-export.md  debug-reconciler.tsx  debug-state.tsx  mint.json  oxlint.json  package.json  pnpm-lock.yaml  (+35 more)
.changeset/: config.json  major-tui-and-examples.md
.claude-plugin/: marketplace.json
.github/: WORKFLOWS.md
.husky/: post-commit
.smithers/: data
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/capabilities/: default.json
apps/tauri-app/src-tauri/icons/: icon.icns
apps/tauri-app/src-tauri/src/: main.rs  ws_server.rs
bash/: important-memories.md  ralph-prompt.md  ralph.sh  session-2026-01-07-1928.md  session-2026-01-07-1930.md  session-2026-01-07-1934.md  session-2026-01-07-1942.md  session-2026-01-07-1952.md
demos/: 01-basic-execution.tape  02-tree-navigation.tape  03-agent-details.tape  04-multi-phase.tape  README.md
docs/: MINTLIFY.md  README.md  cli-commands.md  components.md  concepts.md  github-action-design.md  harness-integration.mdx  installation.mdx  introduction.md  introduction.mdx  mint.json  nested-claude-execution.md  opentui-internals.md  pludom-design.md  quickstart.mdx  refactor-state.md  smithers-py.md  supersmithers-v2.md  tui-architecture.md  tui-design-decisions.md  tui-design.md  tui-e2e-testing.md  tui-research.md  vhs-recording.md  worktree-design.md
evals/: 01-basic-rendering.test.tsx  02-workflow-sequential.test.tsx  03-workflow-parallel.test.tsx  04-agent-claude.test.tsx  05-agent-smithers.test.tsx  06-database-state.test.tsx  07-database-reactive.test.tsx  08-hooks-human.test.tsx  09-hooks-ralph.test.tsx  10-vcs-git.test.tsx  11-vcs-jj.test.tsx  12-mcp-integration.test.tsx  13-composition-advanced.test.tsx  14-kitchen-sink.test.tsx  README.md  all-features.test.ts  all-features.test.tsx  claude-cli.test.tsx  claude-components.test.tsx  claude-executor.test.ts  cli.test.ts  code-review.test.ts  code-review.test.tsx  components.test.tsx  config.test.ts  debug-observability.test.tsx  display.test.ts  edge-cases.test.tsx  error-recovery.test.tsx  execute-helpers.test.ts  execute-options.test.tsx  feature-workflow.test.tsx  hello-world.test.ts  hello-world.test.tsx  human-component.test.tsx  interactive.test.ts  loader.test.ts  mcp-manager.test.ts  mcp-presets.test.ts  multi-agent.test.ts  (+21 more)
examples/: README.md  ci-recovery.tsx  code-review.mdx  god-tui-phase12.tsx  hello-world.mdx  hello-world.ts  hello-world.tsx  multi-agent.mdx  multi-phase.mdx  ralph-wiggum-loop.tsx  reusable-components.mdx  review-workflow.tsx  tsconfig.json  type-check-demo.tsx
hooks/: README.md  post-commit
issues/: 001-agent-hook-tests.md  002-control-plane-tests.md  003-e2e-tests-no-mocks.md  004-boundary-condition-tests.md  005-missing-component-tests.md  TEMPLATE.md  broken-build-orchestration.md  bunx-smithers-demo.md  chat-transport.md  commands-improvements.md  components-improvements.md  control-flow-components.md  control-flow-scoping.md  e2e.md  (+56 more)
smithers_py/: CHANGELOG.md  README.md  __init__.py  __main__.py  decorators.py  demo_tick_loop.py  errors.py  example_usage.py  jsx_runtime.py  minimal_test_runner.py  pyproject.toml  requirements.txt  simple_tick_test.py  test_coverage_report.md  test_import.py  test_jsx_imports.py  test_jsx_runtime.py  test_m0_imports.py  test_m1_event_system.py  test_p0_fixes.py  test_serializer.py  test_tick_loop_comprehensive.py  test_tick_loop_integration.py  validate_m0.py  validate_state.py  verify_m0.py
smithers_py/db/: __init__.py  artifacts_schema.sql  database.py  migrations.py  schema.sql  test_database.py
smithers_py/e2e/: __init__.py  conftest.py  harness.py  test_cli_execution.py  test_reliability.py  test_workflows.py
smithers_py/engine/: __init__.py  approvals.py  artifacts.py  effects.py  events.py  frame_storm.py  fs_watcher.py  handler_transaction.py  loops.py  node_identity.py  phases.py  render_purity.py  stop_conditions.py  task_lease.py  test_approvals.py  test_artifacts.py  test_effects.py  test_frame_storm.py  test_fs_watcher.py  test_loops.py  test_node_identity.py  test_phases.py  test_render_purity.py  test_stop_conditions.py  test_task_lease.py  tick_loop.py  tick_loop.py.backup
smithers_py/examples/: __init__.py  hello_world.py  multi_phase.py
smithers_py/executors/: __init__.py  base.py  claude.py  retry.py  test_claude_executor.py  test_initialize_db.py
smithers_py/logs/: __init__.py  ndjson.py  test_ndjson.py
smithers_py/mcp/: __init__.py  http.py  notifications.py  resources.py  server.py  stdio.py  test_http.py  test_resources.py  test_server.py  test_tools.py  tools.py
smithers_py/nodes/: __init__.py  agent.py  base.py  control.py  effects.py  runnable.py  structural.py  test_nodes.py  text.py
smithers_py/serialize/: __init__.py  test_xml.py  xml.py
smithers_py/state/: __init__.py  actions.py  base.py  signals.py  sqlite.py  test_actions.py  test_signals.py  test_stores.py  volatile.py
smithers_py/vcs/: __init__.py  test_workspace.py  workspace.py
(+2952 files in other folders)
