[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smithers-py"
version = "0.1.0"
description = "Python implementation of Smithers multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite",
    "anthropic",
]

[project.optional-dependencies]
jsx = ["pyjsx"]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
smithers-py = "smithers_py.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["smithers_py"]
