[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smithers-py"
version = "1.0.0"
description = "Python implementation of Smithers multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "William Cory", email = "willcory10@gmail.com" }
]
keywords = ["ai", "agents", "orchestration", "pydantic", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
jsx = ["python-jsx"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
all = ["smithers-py[jsx,dev]"]

[project.scripts]
smithers-py = "smithers_py.__main__:main"

[project.urls]
Homepage = "https://github.com/evmts/smithers"
Documentation = "https://github.com/evmts/smithers/tree/main/smithers_py"
Repository = "https://github.com/evmts/smithers.git"
Issues = "https://github.com/evmts/smithers/issues"
Changelog = "https://github.com/evmts/smithers/blob/main/smithers_py/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["smithers_py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# uv configuration
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.uv.sources]
# Pin to PyPI for all dependencies (no git deps in published package)

# Ruff configuration (replaces black, isort, flake8)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["smithers_py"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
